Fix long words on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,11 @@ body {
 a {
   color: #1e88e5;
   text-decoration: none;
+  word-break: break-word
+}
+
+p {
+  word-break: break-word
 }
 
 header {
