--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -43,11 +43,6 @@
   cursor: pointer
 }
 
-.comment a,
-.comment p {
-  word-break: break-word
-}
-
 #spinner {
   display: none;
   margin-bottom: 1em;
