--- a/static/css/video.css
+++ b/static/css/video.css
@@ -87,7 +87,6 @@ video {
 
 .relVid__link {
   color: #212121;
-  word-wrap: break-word;
 }
 
 .relVid__thumbnailWrapper {
